log

Wed 13 Mar 2024 08:42:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘test_findMax’:
test.c:91:18: error: implicit declaration of function ‘findMax’ [-Werror=implicit-function-declaration]
   91 |     int result = findMax(arr, size);
      |                  ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cedf7b0
Wed 13 Mar 2024 08:42:13 PM UTC: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|7
total_score: 0/70
e53461f
Wed 13 Mar 2024 08:45:21 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:24:10: error: ‘max’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   24 |   return max;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
8d712ef
Wed 13 Mar 2024 08:45:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
c7cef25
Wed 13 Mar 2024 08:46:56 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|7
total_score: 0/70
a24f0c1
Wed 13 Mar 2024 08:49:38 PM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:23:9: error: ‘true’ undeclared (first use in this function)
   23 |   while(true){
      |         ^~~~
exercises.c:6:1: note: ‘true’ is defined in header ‘<stdbool.h>’; did you forget to ‘#include <stdbool.h>’?
    5 | #include <string.h>
  +++ |+#include <stdbool.h>
    6 | 
exercises.c:23:9: note: each undeclared identifier is reported only once for each function it appears in
   23 |   while(true){
      |         ^~~~
exercises.c:25:13: error: ‘i’ undeclared (first use in this function)
   25 |     if (arr[i] > arr[i +1]){
      |             ^
exercises.c:24:9: error: variable ‘max’ set but not used [-Werror=unused-but-set-variable]
   24 |     int max = 0;
      |         ^~~
exercises.c:29:10: error: ‘max’ undeclared (first use in this function); did you mean ‘fmax’?
   29 |   return max;
      |          ^~~
      |          fmax
exercises.c:30:1: error: control reaches end of non-void function [-Werror=return-type]
   30 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
8ab1627
Wed 13 Mar 2024 08:54:18 PM UTC: 
 exercises.c | 13 ++-----------
 1 file changed, 2 insertions(+), 11 deletions(-)
 tests:  0|7
total_score: 0/70
c6698b5
Wed 13 Mar 2024 08:54:48 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|7
total_score: 0/70
2575148
Wed 13 Mar 2024 08:55:03 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|7
total_score: 0/70
9bfcd94
Wed 13 Mar 2024 08:56:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
da8bea1
Wed 13 Mar 2024 08:57:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
ae10f80
Wed 13 Mar 2024 09:05:58 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
9e7b436
Wed 13 Mar 2024 09:06:25 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 10/70
89997c5
Wed 13 Mar 2024 09:07:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
b78d902
Wed 13 Mar 2024 09:07:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
80900a2
Wed 13 Mar 2024 09:08:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
584d274
Wed 13 Mar 2024 09:09:12 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
6ad6827
Wed 13 Mar 2024 09:14:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
da901e2
Wed 13 Mar 2024 09:19:03 PM UTC: 
 exercises.c | 18 ++++++++++++++----
 1 file changed, 14 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:38:9: error: variable ‘arr2’ set but not used [-Werror=unused-but-set-variable]
   38 |     int arr2[size];
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
25678c4
Wed 13 Mar 2024 09:19:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:44:21: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   44 |             arr2[i] = arr[j];
      |                     ^
exercises.c:38:10: error: variable ‘arr2’ set but not used [-Werror=unused-but-set-variable]
   38 |     int *arr2[size];
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
50904ad
Wed 13 Mar 2024 09:19:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:38:9: error: variable ‘arr2’ set but not used [-Werror=unused-but-set-variable]
   38 |     int arr2[size];
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
e55b3f9
Sat 16 Mar 2024 06:09:04 PM UTC: 
 exercises.c | 32 ++++++++++++++++----------------
 1 file changed, 16 insertions(+), 16 deletions(-)
test.c: In function ‘reverseArray’:
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4210963
Sat 16 Mar 2024 06:09:26 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
dee9df5
Sat 16 Mar 2024 06:09:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
e68b597
